<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:RoomTypeItemView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_white">
    <RelativeLayout
        android:id="@+id/fragment_room_type_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_height"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/purple_dark"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_room_type_title_layout"
        android:layout_above="@id/fragment_room_type_footer_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_room_type_item_margin"
            android:orientation="vertical">
            <io.agora.realtimemusicclass.ui.view.RoomTypeItemView
                android:id="@+id/fragment_room_type_item_chorus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                RoomTypeItemView:radius="@dimen/fragment_room_type_item_radius"
                RoomTypeItemView:title="@string/title_chorus"
                RoomTypeItemView:subtitle="@string/subtitle_chorus"
                RoomTypeItemView:startColor="@color/fragment_room_type_item_blue_dark"
                RoomTypeItemView:endColor="@color/fragment_room_type_item_pink"
                RoomTypeItemView:borderColor="@color/fragment_room_type_item_shade"
                RoomTypeItemView:borderThick="@dimen/thickness_1"
                RoomTypeItemView:icon="@drawable/ic_chorus"/>
            <io.agora.realtimemusicclass.ui.view.RoomTypeItemView
                android:id="@+id/fragment_room_type_item_instruments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_room_type_item_margin"
                RoomTypeItemView:radius="@dimen/fragment_room_type_item_radius"
                RoomTypeItemView:title="@string/title_instruments"
                RoomTypeItemView:subtitle="@string/subtitle_instruments"
                RoomTypeItemView:startColor="@color/fragment_room_type_item_orange"
                RoomTypeItemView:endColor="@color/fragment_room_type_item_yellow"
                RoomTypeItemView:borderColor="@color/fragment_room_type_item_shade"
                RoomTypeItemView:borderThick="@dimen/thickness_1"
                RoomTypeItemView:icon="@drawable/ic_instrument"/>
            <io.agora.realtimemusicclass.ui.view.RoomTypeItemView
                android:id="@+id/fragment_room_type_item_piano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_room_type_item_margin"
                RoomTypeItemView:radius="@dimen/fragment_room_type_item_radius"
                RoomTypeItemView:title="@string/title_piano"
                RoomTypeItemView:subtitle="@string/subtitle_piano"
                RoomTypeItemView:startColor="@color/fragment_room_type_item_blue"
                RoomTypeItemView:endColor="@color/fragment_room_type_item_pink_dark"
                RoomTypeItemView:borderColor="@color/fragment_room_type_item_shade"
                RoomTypeItemView:borderThick="@dimen/thickness_1"
                RoomTypeItemView:icon="@drawable/ic_piano"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/fragment_room_type_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/fragment_room_type_footer_margin"
        android:layout_marginBottom="@dimen/fragment_room_type_footer_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_type_agora_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/agora_name"
            android:textColor="@color/purple_dark"
            android:textSize="@dimen/text_size_14"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fragment_room_type_agora_name"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/contact_us"
            android:textColor="@color/purple_medium"
            android:textSize="@dimen/text_size_14"/>
    </RelativeLayout>
</RelativeLayout>