<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:RoleTypeItemView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/fragment_role_type_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_height"
        android:layout_alignParentTop="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_role_type_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/fragment_role_type_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/purple_dark"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_role_type_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_role_type_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_role_type_title_layout"
        android:layout_marginTop="@dimen/fragment_role_type_item_marginTop">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <io.agora.realtimemusicclass.ui.view.RoleTypeItemView
                android:id="@+id/fragment_role_type_item_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                RoleTypeItemView:name="@string/fragment_role_type_role_teacher"
                RoleTypeItemView:img="@drawable/role_type_img_teacher"/>
            <io.agora.realtimemusicclass.ui.view.RoleTypeItemView
                android:id="@+id/fragment_role_type_item_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_role_type_item_margin"
                RoleTypeItemView:name="@string/fragment_role_type_role_student"
                RoleTypeItemView:img="@drawable/role_type_img_student"/>
            <io.agora.realtimemusicclass.ui.view.RoleTypeItemView
                android:id="@+id/fragment_role_type_item_audience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_role_type_item_margin"
                RoleTypeItemView:name="@string/fragment_role_type_role_audience"
                RoleTypeItemView:img="@drawable/role_type_img_student"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_input_layout_line_height"
        android:layout_below="@id/fragment_role_type_select_layout"
        android:layout_marginTop="@dimen/fragment_role_type_item_marginTop"
        android:layout_marginStart="@dimen/fragment_role_type_input_layout_margin_side"
        android:layout_marginEnd="@dimen/fragment_role_type_input_layout_margin_side">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_role_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@id/fragment_role_type_input_underscore"
            android:layout_marginTop="@dimen/fragment_input_name_margin"
            android:layout_marginBottom="@dimen/fragment_input_name_margin"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:text="@string/fragment_role_type_nickname"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/purple_dark"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_role_type_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fragment_role_type_input_underscore"
            android:layout_marginStart="@dimen/fragment_input_name_margin_side"
            android:layout_marginTop="@dimen/fragment_input_name_margin"
            android:layout_marginBottom="@dimen/fragment_input_name_margin"
            android:layout_toEndOf="@id/fragment_role_type_name"
            android:background="@null"
            android:hint="@string/fragment_role_type_nickname_hint"
            android:textColorHint="@color/fragment_input_hint"
            android:lines="1"
            android:textSize="@dimen/text_size_14" />
        <View
            android:id="@+id/fragment_role_type_input_underscore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thickness_1"
            android:layout_alignParentBottom="true"
            android:background="@color/fragment_input_underscore"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_role_type_button"
        android:layout_width="@dimen/fragment_confirm_button_margin_width"
        android:layout_height="@dimen/fragment_confirm_button_margin_height"
        android:layout_marginBottom="@dimen/fragment_confirm_button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/button_bg"/>
</RelativeLayout>