<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/fragment_room_create_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_height"
        android:layout_alignParentTop="true">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_create_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/fragment_room_create_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/purple_dark"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_room_create_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_room_create_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_room_create_title_layout"
        android:layout_marginTop="@dimen/fragment_room_create_input_layout_margin_top"
        android:layout_marginStart="@dimen/fragment_room_create_input_layout_margin_side"
        android:layout_marginEnd="@dimen/fragment_room_create_input_layout_margin_side">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_create_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_input_layout_line_height"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/fragment_room_create_name_title"
            android:textAlignment="gravity"
            android:textColor="@color/purple_dark"
            android:textSize="@dimen/text_size_14" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_room_create_name_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_input_layout_line_height"
            android:layout_marginStart="@dimen/fragment_input_name_margin_side"
            android:layout_toEndOf="@id/fragment_room_create_name"
            android:background="@null"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/fragment_room_create_name_hint"
            android:textColorHint="@color/fragment_input_hint"
            android:textSize="@dimen/text_size_14" />
        <View
            android:id="@+id/fragment_room_create_name_input_underscore_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thickness_1"
            android:background="@color/fragment_input_underscore"
            android:layout_below="@id/fragment_room_create_name"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_create_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_input_layout_line_height"
            android:layout_alignParentStart="true"
            android:layout_below="@id/fragment_room_create_name_input_underscore_name"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:text="@string/fragment_room_create_password_title"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/password_input_title_color" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_fragment_room_create_password_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_input_layout_line_height"
            android:layout_marginStart="@dimen/fragment_input_name_margin_side"
            android:layout_toEndOf="@id/fragment_room_create_password"
            android:layout_below="@id/fragment_room_create_name_input_underscore_name"
            android:background="@null"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/fragment_room_create_password_hint"
            android:textColorHint="@color/password_input_hint_color"
            android:textSize="@dimen/text_size_14" />
        <View
            android:id="@+id/fragment_fragment_room_create_password_underscore_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thickness_1"
            android:layout_below="@id/fragment_room_create_password"
            android:background="@color/fragment_input_underscore"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_room_create_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fragment_room_create_password_check_height"
        android:layout_below="@id/fragment_room_create_input_layout"
        android:layout_marginTop="@dimen/fragment_input_room_create_edit_padding"
        android:layout_marginStart="@dimen/fragment_room_create_input_layout_margin_side">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_room_create_password_check"
            android:layout_width="@dimen/fragment_room_create_check_box_size"
            android:layout_height="@dimen/fragment_room_create_check_box_size"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/check_box_bg"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/fragment_room_create_password_check"
            android:layout_marginStart="@dimen/margin_4"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:text="@string/fragment_room_create_password_enable"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/fragment_input_hint"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_role_type_button"
        android:layout_width="@dimen/fragment_confirm_button_margin_width"
        android:layout_height="@dimen/fragment_confirm_button_margin_height"
        android:layout_marginBottom="@dimen/fragment_confirm_button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/fragment_room_create_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/button_bg"/>
</RelativeLayout>