<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_white">
    <RelativeLayout
        android:id="@+id/fragment_room_list_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_title_height"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/fragment_room_list_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/purple_dark"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_room_list_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_room_list_button"
        android:layout_width="@dimen/fragment_confirm_button_margin_width"
        android:layout_height="@dimen/fragment_confirm_button_margin_height"
        android:layout_marginTop="@dimen/fragment_confirm_button_margin_bottom"
        android:layout_marginBottom="@dimen/fragment_confirm_button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/fragment_room_create_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/button_bg"
        android:visibility="gone"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/fragment_room_list_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_room_list_title_layout"
        android:layout_above="@id/fragment_room_list_button">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_room_list_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/fragment_room_list_item_margin"/>
            <RelativeLayout
                android:id="@+id/fragment_room_list_empty_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="@dimen/fragment_room_list_empty_icon_size"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_room_list_empty_icon_margin_top"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/fragment_room_list_empty_icon_size"
                        android:layout_height="@dimen/fragment_room_list_empty_icon_size"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_empty_list_icon"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="gravity"
                        android:gravity="center"
                        android:text="@string/fragment_room_list_empty"
                        android:textColor="@color/fragment_room_list_empty_text"
                        android:textSize="@dimen/text_size_14"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>