<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/fragment_room_list_item_height"
    android:background="@drawable/room_list_item_bg">
    <RelativeLayout
        android:id="@+id/fragment_room_list_item_text_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/fragment_room_list_item_text_margin_horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"
            android:text="@string/fragment_room_list_item_room_name"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fragment_room_list_item_text_area_room_name"
            android:layout_alignTop="@id/fragment_room_list_item_text_area_room_name"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_room_list_item_text_area_room_name"
            android:layout_marginTop="@dimen/fragment_room_list_item_text_margin_between"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"
            android:text="@string/fragment_room_list_item_room_creator"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_creator_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fragment_room_list_item_text_area_room_creator"
            android:layout_alignTop="@id/fragment_room_list_item_text_area_room_creator"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_room_list_item_text_area_room_creator"
            android:layout_marginTop="@dimen/fragment_room_list_item_text_margin_between"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"
            android:text="@string/fragment_room_list_item_room_id"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_text_area_room_id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fragment_room_list_item_text_area_room_id"
            android:layout_alignTop="@id/fragment_room_list_item_text_area_room_id"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/fragment_room_list_item_icon_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/fragment_room_list_item_text_area"
        android:layout_marginEnd="@dimen/fragment_room_list_item_text_margin_horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_room_list_item_icon"
            android:layout_width="@dimen/fragment_room_list_item_icon_size"
            android:layout_height="@dimen/fragment_room_list_item_icon_size"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_room_list_item_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_room_list_item_icon_size"
            android:layout_toEndOf="@id/fragment_room_list_item_icon"
            android:layout_marginStart="@dimen/fragment_room_list_item_icon_margin"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/purple_dark"/>
    </RelativeLayout>
</RelativeLayout>